--- a/index.html
+++ b/index.html
@@ -2,36 +2,62 @@
     <head>
         <title>Home</title>
         <link rel="stylesheet" href="css/style.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="fonts/Inter/inter.css" />
     </head>
     <body>
-        <img src="img/logo.svg" alt="logo" class="logo">
         <div class="device-container">
             <span class="devices-header">Devices</span>
             <div class="device-list">
                 <serial-devices></serial-devices>
-                <div class="add-device-button">
-                    + Add Device
+                <div class="add-device-container">
+                    <div class="add-device-button">
+                        + Add Device
+                    </div>
                 </div>
             </div>
             
         </div>
         <template id="serial-device-template">
-            <img class="model-image" />
-            <div class="device-info">
-                <div class="name"></div>
-                <div class="serial-number"></div>
+            <div class="device-row">
+                <img class="model-image" />
+                <div class="device-info">
+                    <div class="name"></div>
+                    <div class="serial-number"></div>
+                </div>
+                <div class="device-actions" title="Forget">
+                    <svg viewBox="0 0 24 24" class="forget">
+                        <path
+                        d="M8 12H16M12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12C21 16.9706 16.9706 21 12 21Z"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"/>
+                    </svg>
+                </div>
             </div>
-            <div class="device-actions" title="Forget">
-                <svg viewBox="0 0 24 24" class="forget">
-                    <path
-                       d="M8 12H16M12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12C21 16.9706 16.9706 21 12 21Z"
-                       stroke-width="2"
-                       stroke-linecap="round"
-                       stroke-linejoin="round"/>
-                </svg>
+            <div class="params-container">
+                <div class="vout-container">
+                    <div class="vout-label">Vout</div>
+                    <div class="vout-value">21.27</div>
+                    <div class="vout-unit">V</div>
+                </div>
+                <div class="iout-container">
+                    <div class="iout-label">Iout</div>
+                    <div class="iout-value">3.175</div>
+                    <div class="iout-unit">A</div>
+                </div>
+                <div class="set-container">
+                    <div class="vset-container">
+                        <datalist id="vset-values" class="vset-ticks">
+                            <option value="20" label="20 V"></option>
+                            <option value="15" label="15 V"></option>
+                            <option value="10" label="10 V"></option>
+                            <option value="5" label="5 V"></option>
+                            <option value="0" label="0 V"></option>
+                        </datalist>
+                        <div class="range-value vset-value"></div>
+                        <input type="range" class="vslider vset-slider" list="vset-values" min="0.8" max="20" step="0.01" value="0.8" />
+                    </div>
+                </div>
             </div>
             <div class="measurements-5-ch">
                 <div class="measurement">
@@ -44,14 +70,6 @@
                 </div>
                 <div class="measurement">
                     <div class="measurement-name">T2</div>
-                    <div class="measurement-value">999.9</div>
-                </div>
-                <div class="measurement">
-                    <div class="measurement-name">T3</div>
-                    <div class="measurement-value">999.9</div>
-                </div>
-                <div class="measurement">
-                    <div class="measurement-name">T4</div>
                     <div class="measurement-value">999.9</div>
                 </div>
             </div>
