Add vset, iset lock feature

--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
                     <div class="state-name">OUTPUT &bull;</div>
                     <div class="state-value">--</div>
                 </div>
-                <div class="state out-mode-state">
-                    <div class="state-name">MODE</div>
-                    <div class="state-value out-mode-value">--</div>
+                <div class="state lock-state">
+                    <div class="state-name">LOCK &bull;</div>
+                    <div class="state-value lock-value"><img class="lock-value-img" width="20px" src="img/unlocked.svg" /></div>
                 </div>
             </div>
         </template>
