--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
             <div class="device-list">
                 <serial-devices></serial-devices>
                 <div class="add-device-container">
-                    <div class="add-device-button">
+                    <button class="add-device-button">
                         + Add Device
-                    </div>
+                    </button>
                 </div>
             </div>
             
@@ -24,7 +24,7 @@
                     <div class="name"></div>
                     <div class="serial-number"></div>
                 </div>
-                <div class="device-actions" title="Forget">
+                <button class="device-actions" title="Forget">
                     <svg viewBox="0 0 24 24" class="forget">
                         <path
                         d="M8 12H16M12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12C21 16.9706 16.9706 21 12 21Z"
@@ -32,7 +32,7 @@
                         stroke-linecap="round"
                         stroke-linejoin="round"/>
                     </svg>
-                </div>
+                </button>
             </div>
             <div class="params-container">
                 <div class="out-container">
@@ -63,8 +63,8 @@
                             <option value="5" label="5 V"></option>
                             <option value="0" label="0 V"></option>
                         </datalist>
-                        <div class="range-value left vset-value"></div>
                         <input type="range" class="vert-slider left vset-slider" list="vset-values" min="0.8" max="20" step="0.01" value="0.8" />
+                        <div class="range-value left vset-value"></div>
                     </div>
                     <div class="set-label iset-label"><div>I<sub>SET</sub></div></div>
                     <div class="iset-container">
@@ -80,18 +80,18 @@
                 </div>
             </div>
             <div class="states">
-                <div class="state relay-state">
+                <button class="state relay-state">
                     <div class="state-name">RELAY &bull;</div>
                     <div class="state-value">--</div>
-                </div>
-                <div class="state output-state">
+                </button>
+                <button class="state output-state">
                     <div class="state-name">OUTPUT &bull;</div>
                     <div class="state-value">--</div>
-                </div>
-                <div class="state lock-state">
+                </button>
+                <button class="state lock-state">
                     <div class="state-name">LOCK &bull;</div>
                     <div class="state-value lock-value"><img class="lock-value-img" width="20px" src="img/unlocked.svg" /></div>
-                </div>
+                </button>
             </div>
         </template>
         <script type="module" src="js/index.js"></script>
