Add brownout alert popup

--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
             
         </div>
         <template id="serial-device-template">
+            <div class="alert-popup-overlay" disabled>
+                <div class="alert-popup">
+                    <div class="alert-popup-message">
+                        
+                    </div>
+                </div>
+            </div>
             <div class="device-row">
                 <img class="model-image" />
                 <div class="device-info">
