Add music button

--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@
                     <div class="state-name">LOCK &bull;</div>
                     <div class="state-value lock-value"><img class="lock-value-img" width="20px" src="img/unlocked.svg" /></div>
                 </button>
+                <button class="state play-state">
+                    <div class="state-name">PLAY &bull;</div>
+                    <div class="state-value play-value"><img class="music-img" src="img/music.svg" width="20px"/></div>
+                </button>
             </div>
         </template>
         <script type="module" src="js/index.js"></script>
